--- a/web_flask/templates/6-number_odd_or_even.html
+++ b/web_flask/templates/6-number_odd_or_even.html
@@ -4,6 +4,6 @@
         <TITLE>HBNB</TITLE>
     </HEAD>
     <BODY>
-        <H1>Number: {{ n }} is {{ evenness }}</H1>
+        <H1>Number: {% if n % 2 == 0 %}{{ n }} is even{% else %}{{ n }} is odd{% endif %}</H1>
     </BODY>
 </HTML>
