--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -2,11 +2,13 @@
 <html lang="en">
     <head>
         <title>AirBnB clone</title>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <link rel="stylesheet" href="../static/styles/4-common.css?{{ cache_id }}"/>
         <link rel="stylesheet" href="../static/styles/3-header.css?{{ cache_id }}"/>
         <link rel="stylesheet" href="../static/styles/3-footer.css?{{ cache_id }}"/>
         <link rel="stylesheet" href="../static/styles/6-filters.css?{{ cache_id }}"/>
         <link rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}"/>
+	<script type="text/javascript" src="../static/scripts/8-places.css?{{ cache_id }}"></script>
     </head>
     <body>
         <header>
@@ -36,7 +38,7 @@
                     <h4>&nbsp;</h4>
                     <ul class="popover">
                         {% for amenity in amenities | sort(attribute='name') %}
-                        <li><h4>{{ amenity.name|e }}</h4></li>
+                        <li><h4><input type="checkbox" data-id=":amenity_id" data-name=":amenity_name">{{ amenity.name|e }}</h4></li>
                         {% endfor %}
                     </ul>
                 </div>
