--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../static/styles/3-footer.css?{{ cache_id }}"/>
         <link rel="stylesheet" href="../static/styles/6-filters.css?{{ cache_id }}"/>
         <link rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}"/>
-	<script type="text/javascript" src="../static/scripts/8-places.css?{{ cache_id }}"></script>
+	<script type="text/javascript" src="../static/scripts/1-hbnb.js?{{ cache_id }}"></script>
     </head>
     <body>
         <header>
