--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -44,7 +44,7 @@
                     <h4>&nbsp;</h4>
                     <ul class="popover">
                         {% for amenity in amenities | sort(attribute='name') %}
-                        <li><h4><input type="checkbox" data-id={{ amenity.id|e }} data-name={{ amenity.name|e }}>{{ amenity.name|e }}</h4></li>
+                        <li><input type="checkbox" data-id={{ amenity.id|e }} data-name={{ amenity.name|e }}>{{ amenity.name|e }}</li>
                         {% endfor %}
                     </ul>
                 </div>
