--- a/web_dynamic/templates/1-hbnb.html
+++ b/web_dynamic/templates/1-hbnb.html
@@ -41,7 +41,7 @@
                 <!-- !Filter by Amenities -->
                 <div class="amenities">
                     <h3>Amenities</h3>
-                    <h4>&nbsp;</h4>
+                    <h4 id="h4_amenities" class="h4_amenities">&nbsp;</h4>
                     <ul class="popover">
                         {% for amenity in amenities | sort(attribute='name') %}
                         <li><input type="checkbox" data-id={{ amenity.id|e }} data-name={{ amenity.name|e }}>{{ amenity.name|e }}</li>
