--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -25,7 +25,7 @@
     vertical-align: middle;
     height: 100%;
     float: left;
-    width: 25%;
+    width: 35%;
     line-height: 20px;
 }
 
@@ -86,7 +86,14 @@ h4 {
     font-weight: 400;
     margin-top: 5px;
     margin-bottom: 5px;
-    padding-left: 25px;
+    padding-left: 45px;
+}
+
+.h4_amenities {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    max-width: 500px;
 }
 
 button {
