Feat (Add) Status Api

--- a/web_dynamic/templates/2-hbnb.html
+++ b/web_dynamic/templates/2-hbnb.html
@@ -8,11 +8,12 @@
         <link rel="stylesheet" href="../static/styles/3-footer.css?{{ cache_id }}"/>
         <link rel="stylesheet" href="../static/styles/6-filters.css?{{ cache_id }}"/>
         <link rel="stylesheet" href="../static/styles/8-places.css?{{ cache_id }}"/>
-	      <script type="text/javascript" src="../static/scripts/1-hbnb.js?{{ cache_id }}"></script>
+	      <script type="text/javascript" src="../static/scripts/2-hbnb.js?{{ cache_id }}"></script>
     </head>
     <body>
         <header>
-            <div id="header_logo"></div>
+          <div id="header_logo"></div>
+          <div id="api_status" class="status-default"></div>
         </header>
         <div class="container">
 
