Add: task 4-hbnb.html

--- a/web_dynamic/templates/4-hbnb.html
+++ b/web_dynamic/templates/4-hbnb.html
@@ -19,8 +19,8 @@
 
             <!-- TODO Section Filters  -->
             <section class="filters">
-                <button onclick="searchPlaces()">Search</button>
-
+<!--                <button onclick="searchPlaces()">Search</button>-->
+                <button>Search</button>
                 <!-- !Filter by Locations -->
                 <div class="locations">
                     <h3>States</h3>
