--- a/web_dynamic/static/styles/6-filters.css
+++ b/web_dynamic/static/styles/6-filters.css
@@ -39,7 +39,7 @@ input {
 
 .popover {
     list-style-type: none;
-    top: -15px;
+    top: 5px;
     display: none;
     position: relative;
     background-color: #FAFAFA;
@@ -94,7 +94,7 @@ h3 {
     margin-bottom: 5px;
 }
 
-.filters h4 .display {
+.city_name {
     display: inline;
 }
 
