--- a/web_dynamic/static/styles/8-places.css
+++ b/web_dynamic/static/styles/8-places.css
@@ -134,3 +134,16 @@ article h2 {
     width: 50px;
     height: 50px;
 }
+
+span {
+    color: #FF5A5F;
+    cursor: pointer;
+}
+
+span:hover {
+    color: black;
+}
+
+.reviews {
+    text-align: left;
+}
